Move/split from sales channel

--- a/src/views/dashboard.default.sales-management.track.html
+++ b/src/views/dashboard.default.sales-management.track.html
@@ -1,51 +1,53 @@
 <div ng-controller="SellingPointsCtrl">
-  <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <h2 class="page-header light-text">Sales Channels</h2>
-    <div class="row placeholders">
-      <div class="col-lg-8">
-        <div class="container">
-          <div class="panel-container">
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <button ng-click="addSellingPoint()" class="btn-dashboard">Add Sales Channel</button>
-                <button ng-click="editSellingPoint()" class="btn-dashboard">Edit Sales Channel</button>
-                <button ng-click="viewBlocks()" class="btn-dashboard">View Inventory in Sales</button>
+    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        <h2 class="page-header light-text">Sales Channels</h2>
+        <div class="row placeholders">
+            <div class="col-lg-8">
+                <div class="container">
+                    <div class="panel-container">
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <button ng-click="addSellingPoint()" class="btn-dashboard">Add Sales Channel</button>
+                                <button ng-click="editSellingPoint()" class="btn-dashboard">Edit Sales Channel</button>
+                                <button ng-click="viewBlocks()" class="btn-dashboard">View Inventory in Sales</button>
 
 
-              </div>
-            </div>
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <div class="table-responsive">
-                  <table class="table table-striped">
-                    <thead>
-                      <tr>
-                        <th>#</th>
-                        <th>Name</th>
-                        <th>Date Created</th>
-                        <th>Channel Type</th>
-                        <th>Select</th>
-                      </tr>
-                    </thead>
-                    <tbody ng-repeat="sellingPoint in sellingPoints track by $index">
-                      <tr>
-                        <td>{{$index + 1}}</td>
-                        <td>{{sellingPoint.name}}</td>
-                        <td>{{sellingPoint.dateCreated | date: 'short'}}</td>
-                        <!-- TODO, just set type as first in list for now -->
-                        <td>{{sellingPoint.sellingTargets[0]}}</td>
-                        <td><input type="radio" ng-model="$parent.selectedSellingPoint" ng-value="$index"></td>
-                      </tr>
-                    </tbody>
-                  </table>
+                            </div>
+                        </div>
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <div class="table-responsive">
+                                    <table class="table table-striped">
+                                        <thead>
+                                            <tr>
+                                                <th>#</th>
+                                                <th>Name</th>
+                                                <th>Date Created</th>
+                                                <th>Channel Type</th>
+                                                <th>Select</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody ng-repeat="sellingPoint in sellingPoints track by $index">
+                                            <tr>
+                                                <td>{{$index + 1}}</td>
+                                                <td>{{sellingPoint.name}}</td>
+                                                <td>{{sellingPoint.dateCreated | date: 'short'}}</td>
+                                                <!-- TODO, just set type as first in list for now -->
+                                                <td>{{sellingPoint.sellingTargets[0]}}</td>
+                                                <td>
+                                                    <input type="radio" ng-model="$parent.selectedSellingPoint" ng-value="$index">
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-  </div>
 </div>
 
 
@@ -61,14 +63,15 @@
     <div class="modal-body">
         <form>
             <fieldset class="form-group">
-            <div class="col-lg-12">
-                <label>Name</label>
-                <input class="form-control" ng-model="name" maxlength="25" placeholder="Name of sales channel...">
-                <small class="text-muted">Maximum 25 characters.</small>
-                <br>
-                <div class="checkbox">
-    	            <label><input type="checkbox" ng-model="isEcommerceStage">Sell on e-commerce</label>
-                </div>
+                <div class="col-lg-12">
+                    <label>Name</label>
+                    <input class="form-control" ng-model="name" maxlength="25" placeholder="Name of sales channel...">
+                    <small class="text-muted">Maximum 25 characters.</small>
+                    <br>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" ng-model="isEcommerceStage">Sell on e-commerce</label>
+                    </div>
                 </div>
             </fieldset>
         </form>
@@ -87,14 +90,15 @@
     <div class="modal-body">
         <form>
             <fieldset class="form-group">
-            <div class ="col-lg-12">
-                <label>New Selling Point Name</label>
-                <input class="form-control" ng-model="sellingPoint.name" maxlength="25" placeholder="Name of sales channel...">
-                <small class="text-muted">Maximum 25 characters.</small>
+                <div class="col-lg-12">
+                    <label>New Selling Point Name</label>
+                    <input class="form-control" ng-model="sellingPoint.name" maxlength="25" placeholder="Name of sales channel...">
+                    <small class="text-muted">Maximum 25 characters.</small>
 
-                <div class="checkbox">
-    	            <label><input type="checkbox" ng-model="isEcommerceStage"> Sell on e-commerce</label>
-                </div>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" ng-model="isEcommerceStage"> Sell on e-commerce</label>
+                    </div>
                 </div>
             </fieldset>
         </form>
@@ -110,43 +114,104 @@
 
 
 <script type="text/ng-template" id="viewSellingPointBlocksModal.html">
-  <div class="modal-header">
-    <h3 class="modal-title">Inventory in Selling Point</h3>
-  </div>
-
-
-  <div class="modal-body">
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <div class="table-responsive">
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th>#</th>
-                <th>Product Type</th>
-                <th>Quantity</th>
-                <th>Date Created</th>
-                <th>Select</th>
-              </tr>
-            </thead>
-            <tbody ng-repeat="block in blocks track by $index">
-              <tr>
-                <td>{{$index + 1}}</td>
-                <td>{{block.productType.name}}</td>
-                <td>{{block.quantity + " " + block.units}}</td>
-                <td>{{block.dateCreated | date:"yyyy-MM-dd hh:mm a"}}</td>
-                <td>
-                  <input type="radio" ng-model="$parent.selectedBlock" ng-value="$index">
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
+    <div class="modal-header">
+        <h3 class="modal-title">Inventory in {{stageName}}</h3>
     </div>
-  </div>
 
-  <div class="modal-footer">
-    <button class="btn-dashboard" type="button" ng-click="cancel()">Dismiss</button>
-  </div>
+    <div class="modal-footer">
+
+        <button class="btn-dashboard" type="button" ng-disabled="blocks.length==0" ng-click="moveBlock()">Move</button>
+
+        <!-- THIS IS THE BUTTON FOR VIEW DETAILS MODAL -->
+        <button class="btn-dashboard" type="button" ng-disabled="blocks.length==0" ng-click="viewDetails()">Batch Detail</button>
+        <!-- <button class="btn-dashboard" type="button" ng-disabled="blocks.length==0" ng-click="editBlock()">Edit</button>-->
+        <!-- <button class="btn-dashboard-green" type="button" ng-click="addBlock()">Add</button>-->
+        <!-- <button class="btn-dashboard-yellow" type="button" ng-click="splitBlock()">Split</button>-->
+        <button class="btn-dashboard-red" type="button" ng-disabled="blocks.length==0" ng-click="deleteBlock()">Delete</button>
+
+    </div>
+
+    <div class="modal-body">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <div class="table-responsive">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>Product Type</th>
+                                <th>Quantity</th>
+                                <th>Inventory Input Date</th>
+                                <th>Select</th>
+                            </tr>
+                        </thead>
+                        <tbody ng-repeat="block in blocks track by $index">
+                            <tr>
+                                <td>{{$index + 1}}</td>
+                                <td>{{block.productType.name}}</td>
+                                <td>{{block.quantity + " " + block.units}}</td>
+                                <td>{{block.dateCreated | date: 'short'}}</td>
+                                <td>
+                                    <input type="radio" ng-model="$parent.selectedBlock" ng-value="$index">
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal-footer">
+        <button class="btn-dashboard" type="button" ng-click="ok()">Dismiss</button>
+    </div>
+</script>
+
+<script type="text/ng-template" id="moveBlockModal.html">
+
+    <div class="modal-header">
+        <h3 class="modal-title">Move Inventory Batch</h3>
+    </div>
+    <div class="modal-body">
+        <form>
+            <fieldset class="form-group">
+                <div class="col-lg-8 col-lg-offset-2">
+            </fieldset>
+
+            <fieldset class="form-group">
+                <div class="col-lg-12">
+                    <label>Choose how much inventory to move: </label>
+                    <input class="form-control" ng-model="quantity" type="number" placeholder="ex. 4000">
+                    <small class="text-muted">{{getRemainingQuantity() + " " + block1.units}} remaining of {{block1.quantity + " " + block1.units}} in chosen stage.</small>
+                </div>
+            </fieldset>
+
+            <fieldset class="form-group">
+                <div class="col-lg-12">
+                    <label>Moving chosen inventory batch to stage to supply chain: </label>
+                    <select ng-model="selectedSupplyChain" ng-options="supplyChain as supplyChain.name for supplyChain in supplyChains" class="form-control"></select>
+                    <small class="text-muted">Please select the target supply chain for your inventory.</small>
+                </div>
+            </fieldset>
+
+            <fieldset class="form-group">
+                <div class="col-lg-12">
+                    <label>Moving chosen inventory batch to stage: </label>
+                    <select ng-model="toStage" ng-options="stage as stage.self.name for stage in selectedSupplyChain.stages" class="form-control"></select>
+                    <small class="text-muted">Please select the target stage for your inventory.</small>
+                </div>
+            </fieldset>
+        </form>
+        </div>
+        <div class="modal-footer">
+            <button class="btn-dashboard-green" type="button" ng-click="ok()">OK</button>
+            <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
+        </div>
+      </fieldset>
+    </form>
+    </div>
+    <!--<div class="modal-footer">
+      <button class="btn-dashboard-green" type="button" ng-click="ok()">OK</button>
+      <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
+    </div>-->
 </script>
