--- a/src/views/dashboard.default.sales-management.track.html
+++ b/src/views/dashboard.default.sales-management.track.html
@@ -215,3 +215,94 @@
       <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
     </div>-->
 </script>
+
+<script type="text/ng-template" id="deleteBlockModal.html">
+  <div class="modal-header">
+    <h3 class="modal-title">Delete Batch</h3>
+  </div>
+  <div class="modal-body">
+    <p>Are you sure you want to delete this batch?</p>
+  </div>
+  <div class="modal-footer">
+    <button class="btn-dashboard-green" type="button" ng-click="ok()">Yes</button>
+    <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
+  </div>
+</script>
+
+
+<script type="text/ng-template" id="viewDetailsModal.html">
+  <div class="modal-header">
+    <h3 class="modal-title">Inventory Batch Details</h3>
+  </div>
+
+    <div class="modal-body">
+        <div class="panel-body">
+            <h4 class="text-center">Initial Catch Audit</h4>
+            <br>
+            <div class="table-responsive">
+                <table class="table tableWhite">
+                    <thead>
+                        <tr>
+                            <th>Product Type</th>
+                            <th>Quantity</th>
+                            <th>Catch Date</th>
+                            <th>Catch Region</th>
+                            <th>Caught By</th>
+                            <th>Catch Type</th>
+                            <th>Water Depth</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+
+                        <tr>
+                            <td>{{block.productType.name}}</td>
+                            <td>{{block.quantity + " " + block.units}}</td>
+                            <td>{{block.catchDate | date:"M/d/y"}}</td>
+                            <td>{{block.catchRegion}}</td>
+                            <td>{{block.caughtBy}}</td>
+                            <td>{{block.catchType}}</td>
+                            <td>{{block.waterDepth}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <div class="panel-body">
+            <h4 class="text-center">Lot History</h4>
+            <br>
+            <div class="table-responsive">
+                <table class="table tableWhite">
+                    <thead>
+                        <tr>
+                            <th>Operation</th>
+                            <th>Date</th>
+                            <th>Location</th>
+                            <th>Quantity</th>
+                            <!--<th>Select</th>-->
+                        </tr>
+                    </thead>
+                    <tbody>
+
+                        <tr ng-repeat="event in history.events track by $index">
+                            <td>{{history.events[history.events.length-1-$index].operation}}</td>
+                            <td>{{getDate([history.events.length-1-$index])}}</td>
+                            <td>{{getStageName([history.events.length-1-$index])}}</td>
+                            <td>{{quantities[$index] + " " + units[history.events.length-1-$index]}}</td>
+
+                            <!--<td>
+                                <input type="radio" ng-model="$parent.selectedBlock" ng-value="$index">
+                            </td>-->
+                        </tr>
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <button class="btn-dashboard" type="button" ng-click="cancel()">Close</button>
+    </div>
+  </div>
+
+</script>
