Add max quantity display

--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -187,7 +187,7 @@
                                             <th>Batch (M/D/Y)</th>
                                             <th>Unit Price</th>
                                             <th>Units</th>
-                                            <th>Quantity</th>
+                                            <th>Quantity (Max: {{selectedBlock.quantity + selectedBlock.units}})</th>
                                             <th></th>
                                         </tr>
                                     </thead>
