--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -220,7 +220,7 @@
                                             </td>
 
                                             <td>
-                                                <button ng-disabled="isAddButtonDisabled()" ng-click="addItem()" class="btn-dashboard-green"><i class="fa fa-plus"></i></btn>
+                                                <button ng-disabled="isAddButtonDisabled()" ng-click="addItem()" class="btn-status-success"><i class="fa fa-plus"></i></btn>
                                             </td>
                                         </tr>
                                     </tbody>
