--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -247,15 +247,15 @@
         </form>
         </div>
         <div class="modal-footer">
-            <button class="btn-dashboard-green" type="button" ng-click="ok()">OK</button>
-            <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
+            <button class="btn-status-success" type="button" ng-click="ok()">OK</button>
+            <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
         </div>
       </fieldset>
     </form>
     </div>
     <!--<div class="modal-footer">
-      <button class="btn-dashboard-green" type="button" ng-click="ok()">OK</button>
-      <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
+      <button class="btn-status-success" type="button" ng-click="ok()">OK</button>
+      <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
     </div>-->
 </script>
 
