--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -10,7 +10,7 @@
                 <button ng-click="addOrder()" class="btn-status-success">Add Invoice</button>
                 <button ng-click="viewOrderDetail(selectedOrder)" class="btn-status-default">View Order Details</button>
                 <button ng-click="deleteOrder()" class="btn-status-danger">Delete Order</button>
-                <input type="text" name="search" placeholder="Search for an item" class="search">
+                <!--<input type="text" name="search" placeholder="Search for an item" class="search">-->
               </div>
             </div>
             <div class="panel panel-body">
@@ -131,8 +131,14 @@
           </div>
           <div class="col-lg-4">
             <label>Payment Method</label>
-            <input class="form-control" maxlength="16" ng-model="paymentMethod" placeholder="ex. Credit">
-            <small class="text-muted">Maximum 16 characters</small>
+            <select ng-model="paymentMethod" class="form-control">
+              <option value="Cash">Cash</option>
+              <option value="Cheque">Cheque</option>
+              <option value="Credit">Credit</option>
+              <option value="Debit">Debit</option>
+              <option value="Paypal">Paypal</option>
+            </select>
+            <small class="text-muted">Choose from the dropdown list</small>
           </div>
           <div class="col-lg-4">
             <label>Status</label>
@@ -143,98 +149,89 @@
               <option value="cancelled">Cancelled</option>
               <option value="refunded">Refunded</option>
             </select>
-            <small class="text-muted">Maximum 16 characters</small>
+            <small class="text-muted">Choose from the dropdown list</small>
           </div>
         </fieldset>
+        <fieldset class="form-group">
+          <div class="col-lg-4">
+            <label>Date</label>
+            <input class="form-control" type="date" ng-model="date" placeholder="ex. 12:44 PM, 2016-01-14">
+            <small class="text-muted">Press the triangle for the date widget</small>
+          </div>
+          <div class="col-lg-4">
+            <label>Credit Terms (in Days)</label>
+            <input class="form-control" type="number" max="99999" ng-model="creditTerms" placeholder="ex. 12">
+            <small class="text-muted">Enter the invoice date</small>
+          </div>
+          <div class="col-lg-4">
+            <label>Phone Number</label>
+            <input class="form-control" maxlength="10" ng-model="phone" placeholder="ex. 7781921231">
+            <small class="text-muted">No spaces or dashes</small>
+          </div>
+        </fieldset>
+        <div class="modal-body">
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <div class="table-responsive">
+                <table class="table tableWhite">
+                  <thead>
+                    <tr>
+                      <th>Product</th>
+                      <th>Batch (M/D/Y)</th>
+                      <th>Unit Price</th>
+                      <th>Units</th>
+                      <th>Quantity (Max: {{selectedBlock.quantity + selectedBlock.units}})</th>
+                      <th></th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr ng-repeat="item in items track by $index">
+                      <td>{{item.product.name}}</td>
+                      <td>{{item.block.displayData || item.block.catchDate}}</td>
+                      <td>{{item.unitPrice}}</td>
+                      <td>{{item.units}}</td>
+                      <td>{{item.quantity}}</td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <select class="form-control" ng-model="selectedProduct" ng-options="product.name for product in products"></select>
+                      </td>
 
+                      <td>
+                        <select class="form-control" ng-model="selectedBlock" ng-options="block.displayData for block in blocks"></select>
+                      </td>
 
+                      <td>
+                        <input type="number" min="0" ng-model="unitPrice" step="0.01" class="form-control" placeholder="ex. 12.99"></input>
+                      </td>
 
-                <fieldset class="form-group">
-                    <div class="col-lg-4">
-                        <label>Date</label>
-                        <input class="form-control" type="date" ng-model="date" placeholder="ex. 12:44 PM, 2016-01-14">
-                        <small class="text-muted">Maximum 16 characters</small>
-                    </div>
-                    <div class="col-lg-4">
-                        <label>Credit Terms (in Days)</label>
-                        <input class="form-control" type="number" max="99999" ng-model="creditTerms" placeholder="ex. 12">
-                        <small class="text-muted">Enter the invoice date</small>
-                    </div>
-                    <div class="col-lg-4">
-                        <label>Phone Number</label>
-                        <input class="form-control" maxlength="10" ng-model="phone" placeholder="ex. 7781921231">
-                        <small class="text-muted">Maximum 10 characters. No spaces or dashes.</small>
-                    </div>
-                </fieldset>
+                      <td>
+                        <select ng-model="units" class="form-control">
+                          <option value="lbs">lbs</option>
+                          <option value="half lbs">1/2 lbs</option>
+                          <option value="kg">kg</option>
+                        </select>
+                      </td>
 
-                <div class="modal-body">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            <div class="table-responsive">
-                                <table class="table table-striped">
-                                    <thead>
-                                        <tr>
-                                            <th>Product</th>
-                                            <th>Batch (M/D/Y)</th>
-                                            <th>Unit Price</th>
-                                            <th>Units</th>
-                                            <th>Quantity (Max: {{selectedBlock.quantity + selectedBlock.units}})</th>
-                                            <th></th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <!--ng-repeat="order in orders track by $index"-->
+                      <td>
+                        <input type="number" min="0" ng-model="quantity" value="1" class="form-control" placeholder="ex. 10"></input>
+                      </td>
 
-                                        <tr ng-repeat="item in items track by $index">
-                                            <td>{{item.product.name}}</td>
-                                            <td>{{item.block.displayData || item.block.catchDate}}</td>
-                                            <td>{{item.unitPrice}}</td>
-                                            <td>{{item.units}}</td>
-                                            <td>{{item.quantity}}</td>
-                                        </tr>
-
-
-                                        <tr>
-                                            <td>
-                                                <select class="form-control" ng-model="selectedProduct" ng-options="product.name for product in products"></select>
-                                            </td>
-
-                                            <td>
-                                                <select class="form-control" ng-model="selectedBlock" ng-options="block.displayData for block in blocks"></select>
-                                            </td>
-
-                                            <td>
-                                                <input type="number" min="0" ng-model="unitPrice" step="0.01" class="form-control" placeholder="ex. 12.99"></input>
-                                            </td>
-
-                                            <td>
-                                                <select ng-model="units" class="form-control">
-                                                    <option value="lbs">lbs</option>
-                                                    <option value="half lbs">1/2 lbs</option>
-                                                    <option value="kg">kg</option>
-                                                </select>
-                                            </td>
-
-                                            <td>
-                                                <input type="number" min="0" ng-model="quantity" value="1" class="form-control" placeholder="ex. 10"></input>
-                                            </td>
-
-                                            <td>
-                                                <button ng-disabled="isAddButtonDisabled()" ng-click="addItem()" class="btn-status-success"><i class="fa fa-plus"></i></btn>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                                <h3 class="text-right">Total: ${{order}}</h3>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </form>
+                      <td>
+                        <button ng-disabled="isAddButtonDisabled()" ng-click="addItem()" class="btn-status-success"><i class="fa fa-plus"></i></btn>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+                <h3 class="text-right">Total: ${{order}}</h3>
+              </div>
+            </div>
+          </div>
         </div>
       </form>
     </div>
+    </form>
+  </div>
   </div>
   <div class="modal-footer">
     <div class="alignright">
@@ -244,13 +241,16 @@
   </div>
 </script>
 
+
 <!-- DELETE ORDER MODAL-->
 <script type="text/ng-template" id="deleteOrderModal.html">
   <div class="modal-header">
     <h3 class="modal-title">Delete Product</h3>
   </div>
   <div class="modal-body">
-    <p>Are you sure you want to delete this order? Note that this will add back any inventory quantities from the batches corresponding to each item.</p>
+    <p>Are you sure you want to delete this order?
+      <br>
+      <br> Note that this will add back any inventory quantities from the batches corresponding to each item.</p>
   </div>
   <div class="modal-footer">
     <button class="btn-status-success" type="button" ng-click="ok()">Yes</button>
