--- a/src/views/dashboard.default.sales-management.track.html
+++ b/src/views/dashboard.default.sales-management.track.html
@@ -118,7 +118,7 @@
   <div class="modal-body">
     <div class="panel panel-default">
       <div class="panel-body">
-        <div class="table-responsive">
+        <div class="tableWhite">
           <table class="table tableWhite">
             <thead>
               <tr>
@@ -215,8 +215,8 @@
   <div class="modal-body">
     <div class="panel panel-default">
       <div class="panel-body">
-        <div class="table-responsive">
-          <table class="table table-striped">
+        <div class="tableWhite">
+          <table class="table tableWhite">
             <thead>
               <tr>
                 <th>#</th>
