--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -13,11 +13,11 @@
         </a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav nav-pills">
           <li class="hide"><a ui-sref=".default.products">Products</a></li>
           <li class="hide"><a ui-sref=".default.supply-chain.menu">Supply Chain</a></li>
           <li class="hide"><a ui-sref=".default.inventory.menu">Inventory</a></li>
-          <li class="hide"><a ui-sref=".default.sales-management.menu">Sales Channel</a></li>
+          <li class="hide"><a ui-sref=".default.sales-management.menu">Sales</a></li>
           <li class="hide"><a ui-sref=".default.orders">Orders</a></li>
           <li><a ui-sref=".default.overview">Home</a></li>
           <li><a ui-sref=".help">Help</a></li>
