--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -13,7 +13,7 @@
         </a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav nav-pills">
+        <ul class="nav navbar-nav nav-pills navbar-right">
           <li class="hide"><a ui-sref=".default.products">Products</a></li>
           <li class="hide"><a ui-sref=".default.supply-chain.menu">Supply Chain</a></li>
           <li class="hide"><a ui-sref=".default.inventory.menu">Inventory</a></li>
