add invoice totals ftn complete + decimals truncated

--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -225,7 +225,7 @@
                     </tr>
                   </tbody>
                 </table>
-                <h3 class="text-right">Total: ${{order}}</h3>
+                <h3 class="text-right">Total: ${{getTotal()}}</h3>
               </div>
             </div>
           </div>
