--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -19,7 +19,7 @@
           <li class="hide"><a ui-sref=".default.inventory.menu">Inventory</a></li>
           <li class="hide"><a ui-sref=".default.sales-management.track">Sales</a></li>
           <li class="hide"><a ui-sref=".default.orders">Orders</a></li>
-          <li><a ui-sref=".default.overview">Home</a></li>
+          <li><a ui-sref=".default.products">Home</a></li>
           <li><a ui-sref=".help">Help</a></li>
           <li><a ng-click="logout()" href="#">Logout</a></li>
         </ul>
