--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" ng-model="fisheryName" ui-sref=".default.overview">
+        <a class="navbar-brand" ng-model="fisheryName" ui-sref=".default.products">
           <img src="../img/coastline-logo.png" alt="coastline  logo"> {{fisheryName}}
         </a>
       </div>
