--- a/src/views/dashboard.default.inventory.menu.html
+++ b/src/views/dashboard.default.inventory.menu.html
@@ -18,10 +18,10 @@
                   </thead>
                   <tbody>
                     <tr ng-repeat="supplyChain in supplyChains track by $index">
-                      <td>{{$index + 1}}</td>
-                      <td>{{supplyChain.name}}</td>
-                      <td>{{supplyChain.dateCreated | date: 'short'}}</td>
-                      <td>
+                      <td data-label="#">{{$index + 1}}</td>
+                      <td data-label="Name">{{supplyChain.name}}</td>
+                      <td data-label="Date Created">{{supplyChain.dateCreated | date: 'short'}}</td>
+                      <td data-label="Details">
                         <div class="alignright">
                           <button ng-click="setSupplyChain(supplyChain)" class="btn-status-default">View/Edit</button>
                         </div>
