--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -50,11 +50,11 @@
             </thead>
             <tbody ng-repeat="block in blocks track by $index">
               <tr>
-                <td>{{$index + 1}}</td>
-                <td>{{block.productType.name}}</td>
-                <td>{{block.quantity + " " + block.units}}</td>
-                <td>{{block.dateCreated | date: 'short'}}</td>
-                <td>
+                <td data-label="#">{{$index + 1}}</td>
+                <td data-label="Product">{{block.productType.name}}</td>
+                <td data-label="Quantity">{{block.quantity + " " + block.units}}</td>
+                <td data-label="Add Date">{{block.dateCreated | date: 'short'}}</td>
+                <td data-label="Select">
                   <input type="radio" ng-model="$parent.selectedBlock" ng-value="$index">
                 </td>
               </tr>
@@ -278,13 +278,13 @@
           </thead>
           <tbody>
             <tr>
-              <td>{{block.productType.name}}</td>
-              <td>{{block.quantity + " " + block.units}}</td>
-              <td>{{block.catchDate | date:"M/d/y"}}</td>
-              <td>{{block.catchRegion}}</td>
-              <td>{{block.caughtBy}}</td>
-              <td>{{block.catchType}}</td>
-              <td>{{block.waterDepth}}</td>
+              <td data-label="Product">{{block.productType.name}}</td>
+              <td data-label="Quantity">{{block.quantity + " " + block.units}}</td>
+              <td data-label="Catch Date">{{block.catchDate | date:"M/d/y"}}</td>
+              <td data-label="Region">{{block.catchRegion}}</td>
+              <td data-label="Catcher">{{block.caughtBy}}</td>
+              <td data-label="Method">{{block.catchType}}</td>
+              <td data-label="Depth">{{block.waterDepth}}</td>
             </tr>
           </tbody>
         </table>
@@ -305,10 +305,10 @@
           </thead>
           <tbody>
             <tr ng-repeat="event in history.events track by $index">
-              <td>{{history.events[history.events.length-1-$index].operation}}</td>
-              <td>{{getDate([history.events.length-1-$index])}}</td>
-              <td>{{getStageName([history.events.length-1-$index])}}</td>
-              <td>{{quantities[$index] + " " + units[history.events.length-1-$index]}}</td>
+              <td data-label="Operation">{{history.events[history.events.length-1-$index].operation}}</td>
+              <td data-label="Date">{{getDate([history.events.length-1-$index])}}</td>
+              <td data-label="Location">{{getStageName([history.events.length-1-$index])}}</td>
+              <td data-label="Quantity">{{quantities[$index] + " " + units[history.events.length-1-$index]}}</td>
             </tr>
           </tbody>
         </table>
