--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -3,7 +3,7 @@
  */
 @import url('http://fonts.googleapis.com/css?family=Roboto');
 @import url('http://fonts.googleapis.com/css?family=Open+Sans');
-@import url('http://fonts.googleapis.com/css?family=Lato+Light');
+// @import url('http://fonts.googleapis.com/css?family=Lato+Light');
 $primary-background-color: #EEEEEE;
 $secondary-background-color: #E8E8E8;
 $background-color-3: #DDD;
@@ -11,7 +11,7 @@ $inverse-background-color: #fff;
 $primary-font-color: #000;
 $hyperlink-font-color: #fff;
 $primary-border-color: #CFD8DC;
-$primary-font: "Lato Light", "Open Sans", "Helvetica", "Roboto";
+$primary-font: "Open Sans", "Helvetica", "Roboto";
 
 //Navigation Colours
 $navbar-color: #01579B;
@@ -456,7 +456,7 @@ table.tableWhite {
 .table>thead>tr>td,
 .table>thead>tr>th {
   vertical-align: middle;
-  text-align: middle;
+  text-align: center;
 }
 
 
@@ -471,16 +471,18 @@ table.tableWhite {
     vertical-align: middle;
     text-align: right;
     background-color: #fff;
-
   }
 
   table {
-    border: none;
+    border-radius: 20px;
     .tableWhite {
       border: none;
     }
   }
 
+  .table-responsive {
+    border: none;
+  }
 
   tbody {
     background-color: $secondary-background-color;
@@ -504,11 +506,18 @@ table.tableWhite {
 
   table td:before {
     content: attr(data-label);
+    font-weight: bold;
+    vertical-align: middle;
     float: left;
-    font-weight: 700;
-    letter-spacing: 1px;
   }
+  table td:first-child {
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+  }
+
   table td:last-child {
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
   }
 }
 
