--- a/src/views/dashboard.default.supply-chain.menu.html
+++ b/src/views/dashboard.default.supply-chain.menu.html
@@ -6,7 +6,9 @@
         <div class="panel-container">
           <div class="panel panel-default">
             <div class="panel-body">
-              <button ng-click="createNewSupplyChain()" class="btn-status-default">Create Supply Chain</button>
+              <!-- TODO - make it so that selectedSupplyChain does NOT have to be passed into the function. -->
+              <button ng-click="createNewSupplyChain()" class="btn-status-default">Create</button>
+              <button ng-click="editSupplyChain(selectedSupplyChain)" class="btn-status-default">Edit</button>
             </div>
           </div>
         </div>
@@ -17,6 +19,8 @@
                 <table class="table tableWhite">
                   <thead>
                     <tr>
+                        <th>Select</th>
+
                       <th>#</th>
                       <th>Name</th>
                       <th>Date Created</th>
@@ -25,6 +29,9 @@
                   </thead>
                   <tbody>
                     <tr ng-repeat="supplyChain in supplyChains track by $index">
+                        <td data-label="Select">
+                          <input type="radio" ng-model="$parent.selectedSupplyChain" ng-value="$parent.supplyChains[$index]._id">
+                        </td>
                       <td data-label="#">{{$index + 1}}</td>
                       <td data-label="Name">{{supplyChain.name}}</td>
                       <td data-label="Date Created">{{supplyChain.dateCreated | date: 'short'}}</td>
