--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -54,7 +54,8 @@
 <!-- VIEW ORDER DETAIL MODAL-->
 <script type="text/ng-template" id="viewOrderDetailModal.html">
   <div class="modal-header">
-    <h3 class="modal-title">Customer Order #{{order.invoiceNumber}} (<a ng-click="getPDF()">PDF Version</a>)</h3>
+  <!--<h3 class="modal-title">Customer Order #{{order.invoiceNumber}} (<a ng-click="getPDF()">PDF Version</a>)</h3>-->
+    <h3 class="modal-title">Customer Order #{{order.invoiceNumber}} (<a ng-href="{{ fileUrl }}" download="order.xlsx">PDF Version</a>)</h3>
   </div>
   <div class="col-lg-12">
     <div class="modal-body">
