--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -110,7 +110,7 @@
         <div class="col-lg-6">
           <label>Catch Region</label>
           <input class="form-control" ng-model="catchRegion" placeholder="ex. 48°N, 61.5°W, Gulf of St. Lawrence">
-          <small class="text-muted">Latitude, Longitude, Ocean</small>
+          <small class="text-muted">Enter the Catch Location</small>
         </div>
         <div class="col-lg-6">
           <label>Caught By</label>
