--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -109,7 +109,7 @@
       <fieldset class="form-group">
         <div class="col-lg-6">
           <label>Catch Region</label>
-          <input class="form-control" ng-model="catchRegion" placeholder="ex. 48°N, 61.5°W, Gulf of St. Lawrence">
+          <input class="form-control" ng-model="catchRegion" placeholder="ex. Gulf of St. Lawrence">
           <small class="text-muted">Enter the Catch Location</small>
         </div>
         <div class="col-lg-6">
