--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -54,9 +54,7 @@
 <!-- VIEW ORDER DETAIL MODAL-->
 <script type="text/ng-template" id="viewOrderDetailModal.html">
   <div class="modal-header">
-    <h3 class="modal-title">Customer Order #{{order.invoiceNumber}}
-    ( <a ng-href="{{ fileUrl }}" download="order.xlsx"><i class="fa fa-external-link-square"></i> PDF Version</a> )
-</h3>
+    <h3 class="modal-title">Customer Order #{{order.invoiceNumber}}</h3>
   </div>
   <div class="col-lg-12">
     <div class="modal-body">
@@ -66,9 +64,13 @@
       <h4><b>Order Time :</b> {{order.date | date:'short' }}</h4>
       <h4><b>Credit Terms :</b> {{order.creditTerms}}</h4>
     </div>
+    <div class="modal-footer">
+    <a class="btn-status-default" ng-href="{{ fileUrl }}" download="order:{{order.invoiceNumber}}.xlsx"><i class="fa fa-file-pdf-o"></i>  Export to PDF</a>
+    <a class="btn-status-default" ng-href="{{ fileUrl }}" download="order:{{order.invoiceNumber}}.xlsx"><i class="fa fa-file-excel-o"></i>  Export to Excel</a>
+    </div>
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title">Item Summary</h3>
+        <h3 class="panel-title">Order Summary</h3>
       </div>
       <div class="panel-body">
         <div class="table-responsive">
@@ -140,7 +142,6 @@
               <option value="Cheque">Cheque</option>
               <option value="Credit">Credit</option>
               <option value="Debit">Debit</option>
-              <option value="Paypal">Paypal</option>
             </select>
             <small class="text-muted">Choose from the dropdown list</small>
           </div>
