node arrow color changes

--- a/src/views/dashboard.default.sales-management.track.html
+++ b/src/views/dashboard.default.sales-management.track.html
@@ -117,6 +117,7 @@
   <div class="modal-body">
     <div class="panel panel-default">
       <div class="panel-body">
+       <!-- <div class="panel-scroll">-->
         <div class="tableWhite">
           <table class="table tableWhite">
             <thead>
@@ -143,6 +144,7 @@
         </div>
       </div>
     </div>
+  <!--</div>-->
   </div>
   <div class="modal-footer">
     <button class="btn-status-default" type="button" ng-click="cancel()">Dismiss</button>
