dashboard help PDF button added for auto download

--- a/src/views/dashboard.help.html
+++ b/src/views/dashboard.help.html
@@ -7,8 +7,8 @@
             <div class="panel-body">
               <div class="panel-heading">
                 <h1>Coastline Quick Start Guide</h1>
-                <br>
-                </h1>
+              </h1><br>
+                <a class="btn-status-success" target="_self" href="http://www.coastlinemarket.com/img/coastline-guide.pdf" download="coastline-guide.pdf">PDF Guide Download</a>
                 <hr class="short">
               </div>
 
